Bug 1827613 - Disable document-destroyed-crash.html on debug because of assertion failures on dom/html/HTMLImageElement.cpp. r=aryx
Differential Revision: https://phabricator.services.mozilla.com/D175453

--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/document-destroyed-crash.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/document-destroyed-crash.html.ini
@@ -1,4 +1,6 @@
 [document-destroyed-crash.html]
+  disabled:
+    if debug: https://bugzilla.mozilla.org/show_bug.cgi?id=1827613
   expected:
     if not debug: PASS
     CRASH
