Bug 1827636 - Mark offscreen/drawing-images-to-the-canvas tests as intermittent. r=aryx
Differential Revision: https://phabricator.services.mozilla.com/D175457

--- a/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.broken.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.broken.html.ini
@@ -1,6 +1,2 @@
 [2d.drawImage.broken.html]
-  expected:
-    if (os == "linux") and not swgl and debug and not fission: [ERROR, OK]
-    if (os == "linux") and swgl and fission: [ERROR, OK]
-    if (os == "android") and debug and not swgl: OK
-    [OK, ERROR]
+  expected: [OK, ERROR]
