--- a/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.floatsource.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.floatsource.html.ini
@@ -1,5 +1,2 @@
 [2d.drawImage.floatsource.html]
-  expected:
-    if (os == "linux") and fission and swgl: [ERROR, OK]
-    if (os == "android") and swgl: OK
-    [OK, ERROR]
+  expected: [OK, ERROR]
