--- a/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.clip.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.clip.html.ini
@@ -1,9 +1,2 @@
 [2d.drawImage.clip.html]
-  expected:
-    if (os == "win") and (processor == "x86_64") and debug and swgl: OK
-    if (os == "win") and (processor == "x86_64") and debug and not swgl: [ERROR, OK]
-    if (os == "linux") and debug and fission and not swgl: [ERROR, OK]
-    if (os == "linux") and debug and fission and swgl: [ERROR, OK]
-    if (os == "android") and debug and not swgl: OK
-    if (os == "win") and (processor == "x86_64") and not debug: OK
-    [OK, ERROR]
+  expected: [OK, ERROR]
