--- a/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.transform.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.transform.html.ini
@@ -1,7 +1,2 @@
 [2d.drawImage.transform.html]
-  expected:
-    if (os == "linux") and not swgl and not debug and fission and (processor == "x86_64"): [ERROR, OK]
-    if (os == "linux") and not swgl and debug and fission: [ERROR, OK]
-    if (os == "linux") and not swgl and debug and not fission: [ERROR, OK]
-    if (os == "android") and debug: OK
-    [OK, ERROR]
+  expected: [OK, ERROR]
