--- a/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.zerosource.image.html.ini
+++ b/testing/web-platform/meta/html/canvas/offscreen/drawing-images-to-the-canvas/2d.drawImage.zerosource.image.html.ini
@@ -1,7 +1,2 @@
 [2d.drawImage.zerosource.image.html]
-  expected:
-    if (os == "linux") and not debug and fission and (processor == "x86_64"): [ERROR, OK]
-    if (os == "linux") and debug and fission and not swgl: OK
-    if (os == "android") and debug and not swgl: OK
-    if (os == "win") and swgl: [ERROR, OK]
-    [OK, ERROR]
+  expected: [OK, ERROR]
