Bug 1827613 - Mark image-loading-lazy-subframe-detached-crash.html as intermittent on different platforms. r=aryx DONTBUILD
Depends on D175453

Differential Revision: https://phabricator.services.mozilla.com/D175452

--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-loading-lazy-subframe-detached-crash.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-loading-lazy-subframe-detached-crash.html.ini
@@ -4,7 +4,7 @@
     if debug and (os == "linux") and not fission and not swgl: [CRASH, PASS, ERROR]
     if debug and (os == "linux") and fission and not swgl: [CRASH, ERROR]
     if debug and (os == "win") and (processor == "x86_64") and not swgl: [PASS, TIMEOUT]
+    if debug and (os == "win") and (processor == "x86"): [TIMEOUT, PASS]
     if debug and (os == "mac") and not swgl: [PASS, ERROR, CRASH]
     if debug and (os == "mac") and swgl: [PASS, ERROR, CRASH]
-    if debug and (os == "win") and (processor == "x86"): [TIMEOUT, PASS]
-    if debug and (os == "android"): CRASH
+    if debug and (os == "android"): [PASS, CRASH]
