Bug 1827782 - Update metadata, a=testonly
Differential Revision: https://phabricator.services.mozilla.com/D175479

--- a/testing/web-platform/meta/webtransport/connect.https.any.js.ini
+++ b/testing/web-platform/meta/webtransport/connect.https.any.js.ini
@@ -1,13 +1,12 @@
 [connect.https.any.serviceworker.html]
   expected:
-    if (os == "linux") and debug and not fission and swgl: [ERROR, CRASH]
-    if (os == "linux") and debug and not fission and not swgl: [ERROR, CRASH]
+    if (os == "linux") and debug and not fission and swgl: [OK, ERROR, CRASH]
+    if (os == "linux") and debug and not fission and not swgl: [OK, ERROR, CRASH]
     if (os == "linux") and not debug and fission: [ERROR, OK]
     if (os == "linux") and not debug and not fission: [ERROR, CRASH, OK]
     if (os == "win") and not debug and (processor == "x86"): OK
     if (os == "mac") and not debug: [OK, ERROR]
     if (os == "mac") and debug: OK
-    ERROR
 
 [connect.https.any.worker.html]
   expected:
@@ -16,7 +15,6 @@
     if (os == "linux") and not debug and fission: [CRASH, OK]
     if (os == "mac") and debug: OK
     if (os == "mac") and not debug: [OK, CRASH]
-    CRASH
 
 [connect.https.any.html]
 
@@ -27,4 +25,3 @@
     if (os == "linux") and not debug and not fission: [CRASH, OK]
     if (os == "mac") and not debug: [OK, CRASH]
     if (os == "mac") and debug: OK
-    CRASH
