--- a/testing/web-platform/meta/webtransport/constructor.https.any.js.ini
+++ b/testing/web-platform/meta/webtransport/constructor.https.any.js.ini
@@ -4,7 +4,7 @@
 [constructor.https.any.worker.html]
   expected:
     if (os == "linux") and debug and fission and swgl: [CRASH, OK]
-    if (os == "linux") and debug and fission and not swgl: CRASH
+    if (os == "linux") and debug and fission and not swgl: OK
     if (os == "mac") and debug: OK
     if os == "win": OK
     [OK, CRASH]
@@ -14,14 +14,14 @@
     if fission and (os == "linux") and not debug and (processor == "x86_64"): [OK, ERROR]
     if fission and (os == "linux") and not debug and (processor == "x86"): [OK, ERROR]
     if fission and (os == "linux") and debug and swgl: [OK, ERROR]
-    if fission and (os == "linux") and debug and not swgl: ERROR
+    if fission and (os == "linux") and debug and not swgl: OK
     if not fission and debug and swgl: [OK, ERROR, CRASH]
     if not fission and debug and not swgl: [OK, CRASH, ERROR]
     if not fission and not debug: [ERROR, OK, CRASH]
 
 [constructor.https.any.sharedworker.html]
   expected:
-    if (os == "linux") and fission and (processor == "x86_64") and not swgl and debug: CRASH
+    if (os == "linux") and fission and (processor == "x86_64") and not swgl and debug: OK
     if (os == "linux") and fission and (processor == "x86_64") and not swgl and not debug: [CRASH, OK]
     if (os == "linux") and fission and (processor == "x86_64") and swgl: [CRASH, OK]
     if (os == "linux") and not fission and debug and swgl: [OK, CRASH]
