--- a/testing/web-platform/meta/infrastructure/server/webtransport-h3.https.sub.any.js.ini
+++ b/testing/web-platform/meta/infrastructure/server/webtransport-h3.https.sub.any.js.ini
@@ -5,32 +5,31 @@
     if (os == "mac") and debug: [OK, TIMEOUT]
     if (os == "android") and debug: [TIMEOUT, OK]
     if (os == "android") and not debug: [OK, TIMEOUT]
-    [CRASH, OK, TIMEOUT]
+    [OK, TIMEOUT, CRASH]
   [WebTransport server should be running and should handle a bidirectional stream]
     expected:
       if (os == "android") and debug: [TIMEOUT, FAIL]
       if os == "win": [PASS, TIMEOUT]
       if os == "mac": [PASS, TIMEOUT]
-      [FAIL, TIMEOUT]
+      if os == "android": [FAIL, TIMEOUT]
+      [PASS, FAIL, TIMEOUT]
 
 
 [webtransport-h3.https.sub.any.serviceworker.html]
   expected:
     if (os == "linux") and debug and not fission and swgl: [ERROR, CRASH, OK]
-    if (os == "linux") and debug and not fission and not swgl: [ERROR, CRASH]
+    if (os == "linux") and debug and not fission and not swgl: [OK, ERROR, CRASH]
     if (os == "linux") and not debug and fission: [ERROR, OK]
     if (os == "linux") and not debug and not fission: [ERROR, CRASH, OK]
     if (os == "win") and not debug and (processor == "x86"): OK
     if (os == "mac") and debug: OK
     if (os == "mac") and not debug: [OK, ERROR]
     if os == "android": [TIMEOUT, OK]
-    ERROR
   [WebTransport server should be running and should handle a bidirectional stream]
     expected:
       if os == "linux": [PASS, TIMEOUT]
       if os == "win": [PASS, TIMEOUT]
       if os == "mac": [PASS, TIMEOUT]
-      [TIMEOUT, FAIL]
 
 
 [webtransport-h3.https.sub.any.worker.html]
@@ -42,19 +41,23 @@
     if (os == "mac") and debug: OK
     if (os == "android") and debug: [TIMEOUT, OK]
     if (os == "android") and not debug: [OK, TIMEOUT]
-    CRASH
   [WebTransport server should be running and should handle a bidirectional stream]
     expected:
       if (os == "android") and debug: [TIMEOUT, FAIL]
       if os == "mac": [PASS, TIMEOUT]
       if os == "win": [PASS, TIMEOUT]
-      [FAIL, TIMEOUT]
+      if os == "android": [FAIL, TIMEOUT]
+      [PASS, FAIL, TIMEOUT]
 
 
 [webtransport-h3.https.sub.any.html]
   expected:
-    if os == "android": [OK, TIMEOUT]
+    if (os == "android") and debug and swgl: [OK, TIMEOUT]
+    if (os == "android") and debug and not swgl: [TIMEOUT, OK]
+    if (os == "android") and not debug: [OK, TIMEOUT]
   [WebTransport server should be running and should handle a bidirectional stream]
     expected:
-      if os == "android": [FAIL, TIMEOUT]
+      if (os == "android") and debug and not swgl: [TIMEOUT, FAIL]
+      if (os == "android") and debug and swgl: [FAIL, TIMEOUT]
+      if (os == "android") and not debug: [FAIL, TIMEOUT]
       [PASS, TIMEOUT]
