--- a/testing/web-platform/meta/webtransport/datagrams.https.any.js.ini
+++ b/testing/web-platform/meta/webtransport/datagrams.https.any.js.ini
@@ -21,6 +21,7 @@
       if (os == "linux") and not debug and fission and (processor == "x86"): [FAIL, NOTRUN, PASS]
       if (os == "linux") and not debug and fission and (processor == "x86_64"): [FAIL, NOTRUN, PASS]
       if (os == "win") and not debug and (processor == "x86_64"): [FAIL, PASS, NOTRUN]
+      if not debug and (os == "win") and (processor == "x86"): [PASS, FAIL]
       [FAIL, PASS]
 
   [Datagram MaxAge getters/setters work correctly]
@@ -44,14 +45,13 @@
 
 [datagrams.https.any.serviceworker.html]
   expected:
-    if (os == "linux") and debug and not fission and not swgl: [ERROR, CRASH]
-    if (os == "linux") and debug and not fission and swgl: [ERROR, CRASH]
+    if (os == "linux") and debug and not fission and not swgl: [OK, ERROR, CRASH]
+    if (os == "linux") and debug and not fission and swgl: [OK, ERROR, CRASH]
     if (os == "win") and not debug and (processor == "x86"): OK
     if (os == "linux") and not debug and fission: [ERROR, OK]
     if (os == "linux") and not debug and not fission: [ERROR, CRASH, OK]
     if (os == "mac") and not debug: [OK, ERROR]
     if (os == "mac") and debug: OK
-    ERROR
   [Successfully reading datagrams with BYOB reader.]
     expected: FAIL
 
@@ -63,7 +63,7 @@
 
   [Datagrams read is less than or equal to the incomingHighWaterMark]
     expected:
-      if os == "win": [PASS, FAIL]
+      if (os == "win") and not debug and (processor == "x86"): [PASS, FAIL]
       [FAIL, PASS]
 
 
@@ -74,7 +74,6 @@
     if (os == "win") and not debug and (processor == "x86"): OK
     if (os == "mac") and not debug: [OK, TIMEOUT, CRASH]
     if (os == "mac") and debug: OK
-    CRASH
   [Successfully reading datagrams with BYOB reader.]
     expected: FAIL
 
@@ -89,7 +88,7 @@
   [Datagrams read is less than or equal to the incomingHighWaterMark]
     expected:
       if (os == "mac") and not debug: [FAIL, NOTRUN, PASS]
-      if os == "win": [PASS, FAIL]
+      if (os == "win") and not debug and (processor == "x86"): [PASS, FAIL]
       [FAIL, PASS]
 
   [Datagram MaxAge getters/setters work correctly]
@@ -112,7 +111,6 @@
     if (os == "win") and not debug and (processor == "x86"): OK
     if (os == "mac") and not debug: [OK, CRASH]
     if (os == "mac") and debug: OK
-    CRASH
   [Successfully reading datagrams with BYOB reader.]
     expected: FAIL
 
@@ -124,5 +122,5 @@
 
   [Datagrams read is less than or equal to the incomingHighWaterMark]
     expected:
-      if os == "win": [PASS, FAIL]
+      if (os == "win") and not debug: [PASS, FAIL]
       [FAIL, PASS]
