--- a/testing/web-platform/meta/webtransport/streams-close.https.any.js.ini
+++ b/testing/web-platform/meta/webtransport/streams-close.https.any.js.ini
@@ -86,7 +86,7 @@
     if not debug and (os == "linux") and not fission: [ERROR, CRASH, OK, TIMEOUT]
     if not debug and (os == "win") and (processor == "x86"): [TIMEOUT, OK]
     if not debug and (os == "mac"): [TIMEOUT, ERROR, OK]
-    [ERROR, OK, TIMEOUT]
+    [TIMEOUT, OK, ERROR]
   [Abort client-created bidirectional stream]
     expected: FAIL
 
