Bug 1827613 - Mark image-loading-lazy-subframe-detached-crash.html as intermittent on linux. a=test-only

--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-loading-lazy-subframe-detached-crash.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/image-loading-lazy-subframe-detached-crash.html.ini
@@ -1,8 +1,6 @@
 [image-loading-lazy-subframe-detached-crash.html]
   expected:
-    if debug and (os == "linux") and not fission and swgl: [PASS, ERROR, CRASH]
-    if debug and (os == "linux") and not fission and not swgl: [CRASH, PASS, ERROR]
-    if debug and (os == "linux") and fission and not swgl: [CRASH, ERROR]
+    if debug and (os == "linux"): [PASS, ERROR, CRASH]
     if debug and (os == "win") and (processor == "x86_64") and not swgl: [PASS, TIMEOUT]
     if debug and (os == "win") and (processor == "x86"): [TIMEOUT, PASS]
     if debug and (os == "mac") and not swgl: [PASS, ERROR, CRASH]
