Bug 1828182: Remove macOS exception to fuzzy annotation for WPT block-002-wm-vrl-print.html. (no review, just updating wpt annotation to match reality)
This WPT was annotated as fuzzy *except on macOS* because the test and its
reference case both rendered with the incorrect page-orientation on macOS.

Now the test and its reference render with the correct orientation (as of bug
1821331), so macOS gets the same fuzzy failure that other platforms do and
doesn't want a special exception from the test annotation.

(This was initially annotated as a new mac-specific failure, but really it
should just share the same preexisting fuzzy annotation.)

Differential Revision: https://phabricator.services.mozilla.com/D175526

--- a/testing/web-platform/meta/css/css-break/block-002-wm-vrl-print.html.ini
+++ b/testing/web-platform/meta/css/css-break/block-002-wm-vrl-print.html.ini
@@ -1,6 +1,3 @@
 [block-002-wm-vrl-print.html]
-  fuzzy:
-    if os != "mac": maxDifference=0-74;totalPixels=0-302
+  fuzzy: maxDifference=0-74;totalPixels=0-302
   bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1752639
-  expected:
-    if os == "mac": FAIL
