Bug 1827960 - Add a <svg:use> recursion limit in the parent process. r=dholbert
Differential Revision: https://phabricator.services.mozilla.com/D175473

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14175,6 +14175,23 @@
   value: 1
   mirror: always
 
+# Whether to restrict <svg:use> element recursion levels.
+#
+# - 0: Don't restrict ever.
+# - 1: Restrict everywhere
+# - 2/other: Restrict only in the parent process.
+#
+- name: svg.use-element.recursive-clone-limit.enabled
+  type: int32_t
+  value: 2
+  mirror: always
+
+# What is the recursion limit for svg use element cloning if enabled.
+- name: svg.use-element.recursive-clone-limit
+  type: uint32_t
+  value: 8
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "telemetry."
 #---------------------------------------------------------------------------
