Bug 1736937 - Add "Search bookmarks" option in bookmarks menu. r=dao
https://treeherder.mozilla.org/jobs?repo=try&revision=f1324632dfb7201ad71fddb074ec7e008c32d153

Differential Revision: https://phabricator.services.mozilla.com/D175604

--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -27,6 +27,7 @@ support-files =
   add_search_engine_two.html
 [browser_click_row_border.js]
 [browser_contextualsearch.js]
+[browser_search_bookmarks_from_bookmarks_menu.js]
 [browser_shortcuts_add_search_engine.js]
 support-files =
   add_search_engine_many.html
