Bug 1825807: part 2) Update WPT metadata via script. r=emilio
Removes mostly previously expected failures from the metadata.

Generated via `./mach wpt-update wptreport.json`.

Differential Revision: https://phabricator.services.mozilla.com/D175607

--- a/testing/web-platform/meta/html/semantics/popovers/popover-attribute-basic.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-attribute-basic.html.ini
@@ -1,4 +1,5 @@
 [popover-attribute-basic.html]
+  expected: ERROR
   [The element <div popover="auto">Pop up</div> should behave as a popover.]
     expected: FAIL
 
@@ -63,27 +64,6 @@
     expected: FAIL
 
   [The element <dialog popover="">Dialog with popover attribute</dialog> should behave as a popover.]
-    expected: FAIL
-
-  [Changing attribute values should close open popovers]
-    expected: FAIL
-
-  [Removing a visible popover=auto element from the document should close the popover]
-    expected: FAIL
-
-  [A showing popover=auto does not match :modal]
-    expected: FAIL
-
-  [A popover=auto never matches :open or :closed]
-    expected: FAIL
-
-  [Removing a visible popover=manual element from the document should close the popover]
-    expected: FAIL
-
-  [A showing popover=manual does not match :modal]
-    expected: FAIL
-
-  [A popover=manual never matches :open or :closed]
     expected: FAIL
 
   [Changing a popover from auto to auto (via attr), and then auto during 'beforetoggle' works]
