--- a/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss.html.ini
@@ -16,58 +16,49 @@
     expected: FAIL
 
   [Clicking inside a child popover shouldn't close either popover]
-    expected: NOTRUN
+    expected: FAIL
 
   [Clicking inside a parent popover should close child popover]
-    expected: NOTRUN
+    expected: FAIL
 
   [Clicking on invoking element, after using it for activation, shouldn't close its popover (nested case)]
-    expected: NOTRUN
+    expected: FAIL
 
   [Clicking on invoking element, after using it for activation, shouldn't close its popover (nested case, not used for invocation)]
-    expected: NOTRUN
+    expected: FAIL
 
   [Clicking on invoking element, even if it wasn't used for activation, shouldn't close its popover]
-    expected: NOTRUN
+    expected: FAIL
 
   [Clicking on popovertarget element, even if it wasn't used for activation, should hide it exactly once]
-    expected: NOTRUN
-
-  [Clicking on anchor element (that isn't an invoking element) shouldn't prevent its popover from being closed]
     expected: FAIL
 
   [Clicking on anchor element (that isn't an invoking element) shouldn't prevent its popover from being closed]
     expected: FAIL
 
   [Clicking on anchor element (that isn't an invoking element) shouldn't prevent its popover from being closed]
-    expected: NOTRUN
+    expected: FAIL
+
+  [Clicking on anchor element (that isn't an invoking element) shouldn't prevent its popover from being closed]
+    expected: FAIL
 
   [Dragging from an open popover outside an open popover should leave the popover open]
-    expected: NOTRUN
+    expected: FAIL
 
   [A popover inside an invoking element doesn't participate in that invoker's ancestor chain]
-    expected: NOTRUN
+    expected: FAIL
 
   [An invoking element that was not used to invoke the popover can still be part of the ancestor chain]
-    expected: NOTRUN
+    expected: FAIL
 
   [Scrolling within a popover should not close the popover]
     expected: [NOTRUN, PASS, FAIL]
 
   [Ensure circular/convoluted ancestral relationships are functional]
-    expected: NOTRUN
+    expected: FAIL
 
   [Ensure circular/convoluted ancestral relationships are functional, with a direct showPopover()]
-    expected: NOTRUN
+    expected: FAIL
 
   [Hide the target popover during "hide all popovers until"]
-    expected: NOTRUN
-
-  [Clicking on invoking element, after using it for activation, shouldn't close its popover]
-    expected: NOTRUN
-
-  [Moving focus back to the anchor element should not dismiss the popover]
-    expected: NOTRUN
-
-  [Moving focus outside the popover should not dismiss the popover]
-    expected: NOTRUN
+    expected: FAIL
