Bug 1697980 - Implement new uppercase mapping of eszett (U+00DF) to U+1E9E, but preffed-off by default due to inconsistent font support. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D175620

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -8964,6 +8964,12 @@
   value: 50 # 50%
   mirror: always
 
+# Whether the "modern" uppercase mapping of ß to ẞ (rather than SS) is used.
+- name: layout.css.text-transform.uppercase-eszett.enabled
+  type: bool
+  value: false
+  mirror: always
+
 # Whether to block large cursors intersecting UI.
 - name: layout.cursor.block.enabled
   type: bool
