Bug 1827634 - Update PiP urlbar icon on tab change. r=pip-reviewers,mhowell
Differential Revision: https://phabricator.services.mozilla.com/D175268

--- a/toolkit/components/pictureinpicture/tests/browser.ini
+++ b/toolkit/components/pictureinpicture/tests/browser.ini
@@ -13,6 +13,7 @@ support-files =
   test-page-with-webvtt.html
   test-pointer-events-none.html
   test-reversed.html
+  test-transparent-nested-iframes.html
   test-transparent-overlay-1.html
   test-transparent-overlay-2.html
   test-video.mp4
