--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-fetch-error-external-classic.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-fetch-error-external-classic.html.ini
@@ -1,5 +1,3 @@
 [before-prepare-iframe-fetch-error-external-classic.html]
   [<script> error: Move fetch-error external classic script to iframe before-prepare]
-    expected:
-      if os == "win": PASS
-      [PASS, FAIL]
+    expected: [PASS, FAIL]
