--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-fetch-error-external-module.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-fetch-error-external-module.html.ini
@@ -2,6 +2,4 @@
   disabled:
     if os == "android": https://bugzilla.mozilla.org/show_bug.cgi?id=1780219
   [<script> error: Move fetch-error external module script to iframe before-prepare]
-    expected:
-      if (os == "win") and (processor == "x86_64"): PASS
-      [PASS, FAIL]
+    expected: [PASS, FAIL]
