--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-success-external-classic.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-success-external-classic.html.ini
@@ -7,7 +7,7 @@
     disabled:
       if tsan: https://bugzilla.mozilla.org/show_bug.cgi?id=1722918
     expected:
-      if (os == "win") and (processor == "x86") and debug: [PASS, NOTRUN]
+      if (os == "win") and debug: [PASS, FAIL]
       if (os == "linux") and fission and swgl: [PASS, FAIL]
       if (os == "linux") and not fission: [PASS, FAIL]
       if os == "mac": [PASS, FAIL]
