--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-success-external-module.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/before-prepare-iframe-success-external-module.html.ini
@@ -4,7 +4,4 @@
       if (os == "linux") and ccov: FAIL
 
   [<script> error: Move success external module script to iframe before-prepare]
-    expected:
-      if (os == "linux") and ccov: [PASS, FAIL]
-      if os == "win": PASS
-      [PASS, FAIL]
+    expected: [PASS, FAIL]
