--- a/testing/web-platform/meta/storage-access-api/requestStorageAccess-nested-cross-site-iframe.sub.https.window.js.ini
+++ b/testing/web-platform/meta/storage-access-api/requestStorageAccess-nested-cross-site-iframe.sub.https.window.js.ini
@@ -1,6 +1,6 @@
 [requestStorageAccess-nested-cross-site-iframe.sub.https.window.html]
   expected:
-    if (os == "linux") and debug and not fission and swgl: [OK, TIMEOUT]
+    if (os == "linux") and debug: [OK, TIMEOUT]
     if (os == "android") and not swgl and debug: [TIMEOUT, OK]
     if (os == "android") and not swgl and not debug: [OK, TIMEOUT]
     if (os == "linux") and not debug: [OK, ERROR, TIMEOUT]
