Bug 1827850 - Include UA widget scope in findDebuggees. r=ochameau,devtools-reviewers
This does the trick! Do you know how to possibly test this?

Differential Revision: https://phabricator.services.mozilla.com/D175365

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -290,3 +290,4 @@ skip-if = asan || !nightly_build || fission # Bug 1591064, parent intercept mode
 [browser_dbg-sources-project-search.js]
 [browser_dbg-javascript-tracer.js]
 [browser_dbg-es-module-worker.js]
+[browser_dbg-ua-widgets.js]
