Bug 1753565 - Disable smooth scrolls if prefers-reduced-motion. r=botond
If the user has the prefers-reduced-motion system setting enabled, do
not enable smooth scrolls.

Differential Revision: https://phabricator.services.mozilla.com/D172446

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -5442,6 +5442,7 @@
   type: RelaxedAtomicBool
   value: true
   mirror: always
+  do_not_use_directly: true
 
 # This pref and general.smoothScroll.stopDecelerationWeighting determine
 # the timing function.
