Bug 1123821 - Use the boostrappable Visual Studio definitions for the build. r=firefox-build-system-reviewers,andi
Differential Revision: https://phabricator.services.mozilla.com/D175446

--- a/taskcluster/ci/toolchain/misc.yml
+++ b/taskcluster/ci/toolchain/misc.yml
@@ -376,6 +376,7 @@ win64-vs2019:
         resources:
             - build/vs/vs2019.yaml
         toolchain-artifact: project/gecko/vs/vs.tar.zst
+        toolchain-alias: vs
 
 linux64-afl-instrumentation-2.5:
     description: "AFL instrumentation toolchain build"
