Bug 1824310 - Migrate unittests to browsertime r=perftest-reviewers,afinder,sparky
Differential Revision: https://phabricator.services.mozilla.com/D173513

--- a/testing/raptor/raptor/raptor.ini
+++ b/testing/raptor/raptor/raptor.ini
@@ -1,17 +1,3 @@
-# raptor benchmark tests
-[include:tests/benchmarks/raptor-speedometer.ini]
-[include:tests/benchmarks/raptor-youtube-playback-v9.ini]
-[include:tests/benchmarks/raptor-youtube-playback-h264.ini]
-
-# raptor scenario tests
-[include:tests/scenario/idle.ini]
-[include:tests/scenario/raptor-scn-power-idle.ini]
-[include:tests/scenario/raptor-scn-power-idle-bg.ini]
-
-# raptor unit tests
-# this is required for the manifest unit tests
-[include:tests/unittests/raptor-tp6-unittest.ini]
-
 # raptor-browsertime desktop page-load tests
 [include:tests/tp6/desktop/browsertime-tp6.ini]
 
@@ -44,6 +30,9 @@
 [include:tests/benchmarks/unity-webgl-desktop.ini]
 [include:tests/benchmarks/twitch-animation.ini]
 
+# raptor-browsertime scenario tests
+[include:tests/scenario/idle.ini]
+
 # Fission process switch time test
 [include:tests/custom/browsertime-process-switch.ini]
 
@@ -61,6 +50,10 @@
 
 # Tests that are used for testing our regression system
 [include:tests/custom/browsertime-regression-test.ini]
+
+# raptor-browsertime unit tests
+# this is required for the manifest unit tests
+[include:tests/unittests/browsertime-tp6-unittest.ini]
 
 # Custom upload speed test
 [include:tests/custom/browsertime-upload.ini]
