--- a/testing/raptor/raptor/perfdocs/config.yml
+++ b/testing/raptor/raptor/perfdocs/config.yml
@@ -121,15 +121,6 @@ suites:
             matrix-react-bench: "FF, CH, CU"
             motionmark-animometer: "FF, CH, CU"
             motionmark-htmlsuite: "FF, CH, CU"
-            raptor-speedometer-geckoview: "GV"
-            raptor-youtube-playback-h264-1080p30-firefox: "FF"
-            raptor-youtube-playback-h264-1080p60-firefox: "FF"
-            raptor-youtube-playback-h264-full-1080p30-firefox: "FF"
-            raptor-youtube-playback-h264-full-1080p60-firefox: "FF"
-            raptor-youtube-playback-v9-1080p30-firefox: "FF"
-            raptor-youtube-playback-v9-1080p60-firefox: "FF"
-            raptor-youtube-playback-v9-full-1080p30-firefox: "FF"
-            raptor-youtube-playback-v9-full-1080p60-firefox: "FF"
             speedometer: "FF, CH, CU, FE, GV, RB, CH-M"
             speedometer3: "FF, CH, CU, FE, GV, RB, CH-M"
             stylebench: "FF, CH, CU"
@@ -164,12 +155,6 @@ suites:
         tests:
             idle: "FE, GV, RB"
             idle-bg: "FE, GV, RB"
-            raptor-scn-power-idle-bg-fenix: "FE"
-            raptor-scn-power-idle-bg-geckoview: "GV"
-            raptor-scn-power-idle-bg-refbrow: "RB"
-            raptor-scn-power-idle-fenix: "FE"
-            raptor-scn-power-idle-geckoview: "GV"
-            raptor-scn-power-idle-refbrow: "RB"
     custom:
         description: "Browsertime tests that use a custom pageload test script. These use the pageload type, but may have other intentions."
         tests:
@@ -190,7 +175,7 @@ suites:
     unittests:
         description: "These tests aren't used in standard testing, they are only used in the Raptor unit tests (they are similar to raptor-tp6 tests though)."
         tests:
-            raptor-tp6-unittest-amazon-firefox: "FF"
-            raptor-tp6-unittest-facebook-firefox: "FF"
-            raptor-tp6-unittest-google-firefox: "FF"
-            raptor-tp6-unittest-youtube-firefox: "FF"
+            amazon: "FF"
+            facebook: "FF"
+            google: "FF"
+            youtube: "FF"
