--- a/browser/components/shopping/metrics.yaml
+++ b/browser/components/shopping/metrics.yaml
@@ -92,3 +92,55 @@ shopping:
       - fx-desktop-shopping-eng@mozilla.com
     no_lint:
       - COMMON_PREFIX
+
+  surface_show_quality_explainer_clicked:
+    type: event
+    description: |
+      The user clicked to see the explanation of Review Quality in the
+      shopping component.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1849382
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1849382
+    data_sensitivity:
+      - interaction
+    expires: 122
+    notification_emails:
+      - betling@mozilla.com
+      - fx-desktop-shopping-eng@mozilla.com
+    send_in_pings:
+      - events
+    extra_keys:
+      action:
+        description: >
+          Whether the button was used to expand or collapse the quality 
+          explainer card.
+          Possible values are `expanded` and `collapsed`.
+        type: string    
+    no_lint:
+      - COMMON_PREFIX
+
+  surface_settings_expand_clicked:
+    type: event
+    description: |
+      The user opened the settings menu of the shopping component.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1849382
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1849382
+    data_sensitivity:
+      - interaction
+    expires: 122
+    notification_emails:
+      - betling@mozilla.com
+      - fx-desktop-shopping-eng@mozilla.com
+    send_in_pings:
+      - events
+    extra_keys:
+      action:
+        description: >
+          Whether the button was used to expand or collapse the settings card.
+          Possible values are `expanded` and `collapsed`.
+        type: string
+    no_lint:
+      - COMMON_PREFIX
