--- a/browser/components/firefoxview/tests/browser/firefoxview-next/browser.toml
+++ b/browser/components/firefoxview/tests/browser/firefoxview-next/browser.toml
@@ -12,7 +12,11 @@ support-files = [ "../head.js"]
 ["browser_opentabs_cards.js"]
 
 ["browser_opentabs_recency_next.js"]
-skip-if = ["os == 'mac' && verify"] # macos times out, see bug 1857293
+skip-if = [
+  "os == 'win'",
+  "os == 'mac' && verify"
+] # macos times out, see bug 1857293, skipped for windows, see bug 1858460
+
 
 ["browser_recentlyclosed_firefoxview_next.js"]
 
