--- a/browser/components/firefoxview/tests/browser/firefoxview-next/browser.toml
+++ b/browser/components/firefoxview/tests/browser/firefoxview-next/browser.toml
@@ -9,6 +9,8 @@ support-files = [ "../head.js"]
 
 ["browser_opentabs_firefoxview_next.js"]
 
+["browser_opentabs_cards.js"]
+
 ["browser_opentabs_recency_next.js"]
 skip-if = ["os == 'mac' && verify"] # macos times out, see bug 1857293
 
