Bug 1860644: enable isEarlyStartup for `attribution` Nimbus feature r=nalexander, a=dsmith
It turns out that anything that feeds into the Telemetry Environment requires `isEarlyStartup`.

Differential Revision: https://phabricator.services.mozilla.com/D191683

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -1925,6 +1925,7 @@ feltPrivacy:
 attribution:
   description: Prefs related to install attribution
   hasExposure: false
+  isEarlyStartup: true
   variables:
     macosEnabled:
       type: boolean
@@ -1941,4 +1942,3 @@ phc:
       description: Whether to enable PHC
       type: boolean
       setPref: memory.phc.enabled
-
