--- a/devtools/client/debugger/test/mochitest/browser_kz.toml
+++ b/devtools/client/debugger/test/mochitest/browser_kz.toml
@@ -142,6 +142,9 @@ skip-if = ["os == 'win'"]
 ["browser_dbg-preview-source-maps.js"]
 skip-if = ["os == 'win'"]
 
+["browser_dbg-preview-wrapped-lines.js"]
+fail-if = ["a11y_checks"] # Bug 1860733 splitter element is not focusable
+
 ["browser_dbg-preview.js"]
 skip-if = [
   "os == 'win'",
