--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14942,6 +14942,11 @@
   value: 0
   mirror: always
 
+- name: webgl.gl_khr_no_error
+  type: RelaxedAtomicBool
+  value: true
+  mirror: always
+
 - name: webgl.lose-context-on-memory-pressure
   type: RelaxedAtomicBool
   value: false
