--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14944,7 +14944,11 @@
 
 - name: webgl.gl_khr_no_error
   type: RelaxedAtomicBool
+#ifdef XP_WIN
+  value: false
+#else
   value: true
+#endif
   mirror: always
 
 - name: webgl.lose-context-on-memory-pressure
