--- a/browser/components/urlbar/tests/browser/browser.toml
+++ b/browser/components/urlbar/tests/browser/browser.toml
@@ -174,7 +174,11 @@ support-files = ["slow-page.sjs"]
 
 ["browser_copying.js"]
 https_first_disabled = true
-support-files = ["authenticate.sjs"]
+support-files = [
+  "authenticate.sjs",
+  "file_copying_home.html",
+  "wait-a-bit.sjs",
+]
 
 ["browser_customizeMode.js"]
 
