Bug 1857925 - Test for unnecessary AutoRealm in Then callback. r=saschanaz, a=dsmith
Depends on D191846

Differential Revision: https://phabricator.services.mozilla.com/D191847

--- a/js/xpconnect/tests/unit/xpcshell.ini
+++ b/js/xpconnect/tests/unit/xpcshell.ini
@@ -139,6 +139,7 @@ head = head_ongc.js
 [test_reflect_parse.js]
 [test_localeCompare.js]
 [test_recursive_import.js]
+[test_ReadableStream_from.js]
 [test_xpcomutils.js]
 [test_unload.js]
 [test_attributes.js]
