Bug 1857324 - tile_id is a number not a string  a=diannaS
Depends on D190980

Original Revision: https://phabricator.services.mozilla.com/D191341

Depends on D192239

Differential Revision: https://phabricator.services.mozilla.com/D192241

--- a/browser/components/newtab/metrics.yaml
+++ b/browser/components/newtab/metrics.yaml
@@ -324,8 +324,8 @@ topsites:
         type: string
       tile_id: &tile_id
         description: >
-          The tile id of the advertiser provided by Contile
-        type: string
+          The tile id of the advertiser provided by Contile. Like `74357`.
+        type: quantity
       newtab_visit_id: *newtab_visit_id
       is_sponsored: &is_sponsored
         description: Whether the topsite tile was sponsored.
