Bug 1833105 - Added two histogram telemetry checks for clean copy. r=pbz,anti-tracking-reviewers, a=dsmith
Depends on D191339

Differential Revision: https://phabricator.services.mozilla.com/D189175

--- a/browser/components/urlbar/tests/browser/browser.toml
+++ b/browser/components/urlbar/tests/browser/browser.toml
@@ -561,6 +561,8 @@ support-files = ["slow-page.sjs"]
 
 ["browser_strip_on_share.js"]
 
+["browser_strip_on_share_telemetry.js"]
+
 ["browser_suggestedIndex.js"]
 
 ["browser_suppressFocusBorder.js"]
