Bug 1858470 - Record ads exposure counter for opted-in users r=perry.mcmanis,a=dsmith
* Also add tests for ads exposure, adding some setters to the Child to ease mocking.

Differential Revision: https://phabricator.services.mozilla.com/D192581

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -1700,6 +1700,10 @@ shopping2023:
       description: True if showing recommended products is enabled
       type: boolean
       setPref: browser.shopping.experience2023.ads.enabled
+    adsExposure:
+      description: True if we want to record ad inventory for opted-in users, even if ads are disabled
+      type: boolean
+      setPref: browser.shopping.experience2023.ads.exposure
     surveyEnabled:
       description: True if showing survey is enabled
       type: boolean
