--- a/browser/components/shopping/metrics.yaml
+++ b/browser/components/shopping/metrics.yaml
@@ -558,3 +558,23 @@ shopping:
       - fx-desktop-shopping-eng@mozilla.com
     send_in_pings:
       - events
+
+  ads_exposure:
+    type: event
+    description: |
+      On a supported product page, the review checker showed analysis, and
+      the ads exposure pref was enabled, or review checker ads were enabled,
+      and when we tried to fetch an ad from the ad server, an ad was available.
+      Does not indicate whether the ad was actually shown.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1858470
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1858470
+    data_sensitivity:
+      - interaction
+    expires: 134
+    notification_emails:
+      - betling@mozilla.com
+      - fx-desktop-shopping-eng@mozilla.com
+    send_in_pings:
+      - events
