--- a/browser/components/shopping/tests/browser/browser.toml
+++ b/browser/components/shopping/tests/browser/browser.toml
@@ -13,6 +13,8 @@ prefs = [
 
 ["browser_adjusted_rating.js"]
 
+["browser_ads_exposure_telemetry.js"]
+
 ["browser_analysis_explainer.js"]
 
 ["browser_exposure_telemetry.js"]
