Bug 1860468 - Use nonprod entitlements on non-shippable builds  a=diannaS
Removes the direct relationship between hardened-signing type (production/developer) and project/release level. Having them separate should make it more explicit on when to use production entitlements or not.

Original Revision: https://phabricator.services.mozilla.com/D191705

Differential Revision: https://phabricator.services.mozilla.com/D192965

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -711,7 +711,7 @@ mac-notarization:
 
 mac-signing:
     hardened-sign-config:
-        by-release-level:
+        by-hardened-signing-type:
             production:
                 - deep: false
                   runtime: true
