--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3802,7 +3802,7 @@
 # SetDocumentURI security option, enforces origin check
 - name: dom.security.setdocumenturi
   type: bool
-  value: true
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
 
 # Whether or not selection events on text controls are enabled.
