--- a/dom/base/test/jsmodules/importmaps/mochitest.toml
+++ b/dom/base/test/jsmodules/importmaps/mochitest.toml
@@ -2,6 +2,7 @@
 support-files = [
   "bug_1865410_module_a.mjs",
   "bug_1865410_module_b.mjs",
+  "bug_1873417.mjs",
   "module_importMap_with_external_script_0.mjs",
   "module_importMap_with_external_script_1.mjs",
   "module_importMap_with_external_script_2.mjs",
@@ -29,3 +30,5 @@ prefs = ["dom.importMaps.enabled=true"]
 ["test_importMap_with_external_script.html"]
 
 ["test_bug_1865410.html"]
+
+["test_bug_1873417.html"]
